[package]
name = "rustbook"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "fahrenheit_to_celsius"
path = "src/bin/ch03-05-control-flow/fahrenheit_to_celsius.rs"

[[bin]]
name = "nth_fibonacci"
path = "src/bin/ch03-05-control-flow/nth_fibonacci.rs"

[[bin]]
name = "median"
path = "src/bin/ch08-common-collections/median.rs"

[[bin]]
name = "mode"
path = "src/bin/ch08-common-collections/mode.rs"